Fixed problems with text and Live Search not showing up properly in the search bar.

--- a/src/interlegis/portalmodelo/theme/themes/IDG-verde/css/main.css
+++ b/src/interlegis/portalmodelo/theme/themes/IDG-verde/css/main.css
@@ -242,7 +242,7 @@ div.position-10 { margin-left: -30.042%; }
 
 #header > div {
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     margin: 0 auto;
     max-width: 960px;
 }
@@ -478,10 +478,14 @@ input.searchField { -moz-appearance: none; }
     font-family: "open_sansregular", Arial, Helvetica, sans-serif;
 }
 
-#searchGadget,
+#portal-searchbox #searchGadget{
+    border: none;
+    text-indent: 0;
+}
+
 #header input.searchButton {
     padding: 0.3em;
-    padding: 4px 15px;
+    padding: 6px 12px;
     border: none;
     background: transparent;
     text-indent: -2000px;
@@ -491,11 +495,21 @@ input.searchField { -moz-appearance: none; }
     background: url("../img/search-button.gif") no-repeat 3px 2px #FFFFFF;
 }
 
+
+/* Busca Ativa
+   ========================================================================== */
 #LSResult {
-    z-index: 1;
+    z-index: 100;
     margin-top: 0.5%;
+    font-size: 1.3em;
 }
 
+.livesearchContainer {
+    text-align: left;
+    padding: 0 1em 1em;
+    border: 1px solid #CCC;
+    box-shadow: 0px 1px 15px 3px rgba(90, 90, 90, 0.5)
+}
 
 /* ==========================================================================
    Conteúdo
